--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -10,6 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/vue-fontawesome": "^0.1.5",
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0-beta",
     "bootstrap-vue": "^2.0.0-rc.11",
@@ -19,6 +22,7 @@
     "precss": "^4.0.0",
     "tether": "^1.4.5",
     "vue": "^2.5.2",
+    "vue-github-buttons": "^2.1.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -55,7 +59,7 @@
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack-dev-server": "^3.1.11",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
