--- a/pom.xml
+++ b/pom.xml
@@ -1,30 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
-    <project xmlns="http://maven.apache.org/POM/4.0.0"
-             xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-             xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-        <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-        <parent>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-parent</artifactId>
-            <version>2.1.1.RELEASE</version>
-        </parent>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.1.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
 
-        <groupId>com.tonikolaba.springvuejsXstarter</groupId>
-        <artifactId>spring-vuejsxstarter</artifactId>
-        <packaging>pom</packaging>
-        <version>1.0-SNAPSHOT</version>
-        <name>spring-vuejsxstarter</name>
-        <description>Spring Boot and Vue.js project for Starter</description>
+    <groupId>com.tonikolaba.springvuejsXstarter</groupId>
+    <artifactId>spring-vuejsxstarter</artifactId>
+    <packaging>pom</packaging>
+    <version>1.0-SNAPSHOT</version>
 
-        <modules>
-		    <module>frontend-vue</module>
-            <module>backend-spring</module>
-        </modules>
+    <name>spring-vuejsxstarter</name>
+    <description>Spring Boot and Vue.js project for Starter</description>
 
-        <properties>
-            <main.basedir>${project.basedir}</main.basedir>
-        </properties>
-    </project>
+    <modules>
+        <module>frontend-vue</module>
+        <module>backend-spring</module>
+    </modules>
+
+
+    <properties>
+        <main.basedir>${project.basedir}</main.basedir>
+    </properties>
+</project>
 
 
