--- a/backend-spring/src/main/resources/application.properties
+++ b/backend-spring/src/main/resources/application.properties
@@ -2,9 +2,11 @@
 server.port=8080
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2_console
-spring.datasource.url=jdbc:h2:file:~/h2/testdb
-spring.datasource.username=toni
+#spring.datasource.url=jdbc:h2:file:~/h2/dbspringvue
+spring.datasource.url=jdbc:mysql://localhost:3306/dbspringvue
+spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
